@@ -575,4 +575,5 @@ Fri Feb 26 15:39:18 CST 2016
 
 
 Sat Feb 27 16:46:08 CST 2016
-- [M] arch/x86/include/asm/pgtable*.h		[D] Various updates!!!!!
+- [M] arch/x86/include/asm/pgtable*.h		[D] Add various functions.
+- [D] include/asm-generic/pgtable.h
